--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/p-prado/todolist.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -13,5 +17,9 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/p-prado/todolist/issues"
+  },
+  "homepage": "https://github.com/p-prado/todolist#readme"
 }
