--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "start": "node app.js"
+    "start": "node app.js",
     "url": "git+https://github.com/p-prado/todolist.git"
   },
   "author": "",
